--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@langchain/openai": "^0.3.17",
     "@langchain/textsplitters": "^0.1.0",
     "@supabase/supabase-js": "^2.48.1",
+    "autoprefixer": "^10.4.20",
     "langchain": "^0.3.12",
-    "next": "15.1.6",
+    "next": "^15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "supabase": "^2.6.8"
@@ -27,8 +28,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
