Remove supabase url and api dependency

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "^15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "supabase": "^2.6.8"
+    "supabase": "^2.6.8",
+    "dotenv": "^16.4.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
